--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
 
 <body>
     <div class="root-container">
+        <div class="navbar-container">
+            <div class="navbar-item">
+                <div class="navbar-item-container">
+                    <div class="super-script">
+                        White Paper
+                    </div>
+                    <div class="sub-script">
+                        Soon
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="header-container">
             <div class="header-title">
                 Astral Engine
@@ -25,7 +37,7 @@
                 uploads them to it's Instagram handle <a href="https://www.instagram.com/astralengine">@astralengine</a>
             </div>
             <div class="about-subtitle">
-                It finds new images based on what it learnt from it previous images
+                It finds new images based on what it learnt from the previous ones.
             </div>
         </div>
         <div class="footer-container">
